--- a/MAFIA43/app/src/main/res/values/colors.xml
+++ b/MAFIA43/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#333333</color>
     <color name="colorAccent">#ffd700</color> <!-- Temporary -->
     <color name="white">#ffffff</color>
+    <color name="black">#000</color>
 </resources>
