added colors, added scrolling and selection functionality, added confirm button functionality

--- a/MAFIA43/app/src/main/res/layout/player_list_item.xml
+++ b/MAFIA43/app/src/main/res/layout/player_list_item.xml
@@ -13,6 +13,7 @@
         android:padding="16dp"
         android:textAppearance="@android:style/TextAppearance.Material.Display1"
         android:textColor="@color/colorPrimaryDark"
+        android:background="?android:attr/activatedBackgroundIndicator"
         tools:ignore="MissingConstraints"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
