--- a/MAFIA43/app/src/main/res/layout/voting_selection.xml
+++ b/MAFIA43/app/src/main/res/layout/voting_selection.xml
@@ -19,11 +19,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:fontFamily="@font/opensans_regular"
         android:text="@string/voting"
         android:textAlignment="center"
-        android:textSize="30sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -51,7 +50,7 @@
         android:fontFamily="@font/opensans_bold"
         android:text="@string/day_num"
         android:textAlignment="center"
-        android:textSize="30sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,23 +61,30 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="350dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="420dp"
         android:fontFamily="@font/opensans_regular"
         android:text="@string/vote_selection"
         android:textAlignment="center"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="0.085"
         tools:text="@string/vote_selection" />
 
+    <!-- This Nested Scroll view and the structure in it is necessary for
+    the list of players to be scrollable. It must be structured like this with
+    the android:fillViewPort attribute set to true in NestedScrollView
+    and the LinearLayout parent of the ListView and the
+    android:nestedScrolllingEnabled=true in ListView-->
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scroll_players"
         android:layout_width="300dp"
         android:layout_height="280dp"
-        app:layout_constraintBottom_toTopOf="@id/button"
+        app:layout_constraintBottom_toTopOf="@id/confirm_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,16 +100,20 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             tools:ignore="MissingConstraints"
-            android:nestedScrollingEnabled="true"/>
+            android:nestedScrollingEnabled="true"
+            android:choiceMode="singleChoice"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/confirm_button"
+        android:layout_width="170dp"
+        android:layout_height="70dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/confirm_vote"
+        android:textSize="25sp"
+        android:background="@color/lightGrey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
