--- a/MAFIA43/app/src/main/res/layout/temp.xml
+++ b/MAFIA43/app/src/main/res/layout/temp.xml
@@ -7,6 +7,7 @@
     tools:context=".TitleActivity">
 
     <!-- Background -->
+
     <TextView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
@@ -30,5 +31,20 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.519" />
+
+    <Button
+        android:id="@+id/night_button"
+        android:layout_width="243dp"
+        android:layout_height="139dp"
+        android:background="@color/white"
+        android:fontFamily="@font/opensans_bold"
+        android:text="GO TO NIGHT"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="120px"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.185" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
