--- a/MAFIA43/app/src/main/res/layout/night_role_selection.xml
+++ b/MAFIA43/app/src/main/res/layout/night_role_selection.xml
@@ -32,15 +32,12 @@
         tools:text="@string/night" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView2"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/divider"
-        android:src="@drawable/hdiv_dark"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.34"
         app:srcCompat="@drawable/hdiv_light" />
