--- a/MAFIA43/app/src/main/res/layout/night_role_selection.xml
+++ b/MAFIA43/app/src/main/res/layout/night_role_selection.xml
@@ -9,14 +9,13 @@
     <!-- Background -->
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/nsTextView4"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark"
-        android:text="" />
+        android:background="@color/colorPrimaryDark" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/opensans_regular"
@@ -24,7 +23,7 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/nsTextView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,18 +31,18 @@
         tools:text="@string/night" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/nsImageView"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/nsTextView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/nsTextView"
         app:layout_constraintVertical_bias="0.34"
         app:srcCompat="@drawable/hdiv_light" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/nsTextView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/opensans_bold"
@@ -51,14 +50,14 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@id/textView3"
+        app:layout_constraintBottom_toTopOf="@id/nsTextView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:layout_constraintTop_toBottomOf="@id/nsTextView"
         tools:text="@string/night_role" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/nsTextView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -69,10 +68,10 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView4"
+        app:layout_constraintBottom_toBottomOf="@+id/nsTextView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/nsTextView2"
         app:layout_constraintVertical_bias="0.085"
         tools:text="@string/night_selection" />
 
@@ -90,7 +89,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView3">
+        app:layout_constraintTop_toBottomOf="@id/nsTextView3">
 
         <LinearLayout
             android:layout_width="match_parent"
