--- a/MAFIA43/app/src/main/res/layout/night_role_confirm.xml
+++ b/MAFIA43/app/src/main/res/layout/night_role_confirm.xml
@@ -42,9 +42,12 @@
         android:id="@+id/nRoleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="450dp"
         android:fontFamily="@font/opensans_regular"
         android:text="@string/night_role"
+        android:textAlignment="center"
         android:textColor="@android:color/background_light"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
