--- a/MAFIA43/app/src/main/res/layout/night_role_confirm.xml
+++ b/MAFIA43/app/src/main/res/layout/night_role_confirm.xml
@@ -25,7 +25,6 @@
         android:id="@+id/nTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:fontFamily="@font/opensans_bold"
         android:text="@string/night"
         android:textAlignment="center"
@@ -36,6 +35,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.6"
         tools:text="@string/night" />
 
     <TextView
@@ -43,8 +43,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="150dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="450dp"
         android:fontFamily="@font/opensans_regular"
         android:text="@string/night_role"
         android:textAlignment="center"
@@ -53,20 +53,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nImageView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         tools:text="@string/night_role" />
 
     <ImageView
         android:id="@+id/nImageView"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="75dp"
-        app:layout_constraintBottom_toTopOf="@+id/nRoleTextView"
+        android:layout_marginBottom="450dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nTextView"
-        app:layout_constraintVertical_bias="0.34"
+        app:layout_constraintVertical_bias="0.120000005"
         app:srcCompat="@drawable/hdiv_light" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
