Added timer and skip button for voting

--- a/MAFIA43/app/src/main/res/layout/player_list_item.xml
+++ b/MAFIA43/app/src/main/res/layout/player_list_item.xml
@@ -14,6 +14,7 @@
         android:textAppearance="@android:style/TextAppearance.Material.Display1"
         android:textColor="@color/colorPrimaryDark"
         android:background="?android:attr/activatedBackgroundIndicator"
-        tools:ignore="MissingConstraints"/>
+        tools:ignore="MissingConstraints"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
