--- a/MAFIA43/app/src/main/res/layout/voting_selection.xml
+++ b/MAFIA43/app/src/main/res/layout/voting_selection.xml
@@ -89,7 +89,8 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:background="@drawable/border">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -109,16 +110,46 @@
         android:id="@+id/confirm_button"
         android:layout_width="170dp"
         android:layout_height="70dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="30dp"
+        android:background="@color/lighterGrey"
         android:text="@string/confirm_vote"
         android:textSize="25sp"
-        android:background="@color/lightGrey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scroll_players"
         tools:ignore="NotSibling" />
+
+    <Button
+        android:id="@+id/skip_button"
+        android:layout_width="130dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/lighterGrey"
+        android:text="@string/skip_vote"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.056"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/confirm_button"
+        tools:ignore="MissingConstraints,NotSibling" />
+
+    <TextView
+        android:id="@+id/timer_text"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:text="70dp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/skip_button"
+        app:layout_constraintTop_toBottomOf="@+id/confirm_button"
+        app:layout_constraintVertical_bias="0.781">
+
+    </TextView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
