--- a/MAFIA43/app/src/main/res/layout/vote_recap.xml
+++ b/MAFIA43/app/src/main/res/layout/vote_recap.xml
@@ -7,25 +7,45 @@
     tools:context=".TitleActivity">
 
     <!-- Background -->
-    <TextView
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:text=""
-        android:background="@color/colorPrimaryDark"/>
 
     <!-- Title -->
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark"
+        android:text=""
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
+
     <TextView
         android:id="@+id/voted_out_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/opensans_bold"
-        android:textSize="70dp"
+        android:textSize="50sp"
+        android:textAlignment="center"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.15" />
+
+    <Button
+        android:id="@+id/recap_next_button"
+        android:layout_width="170dp"
+        android:layout_height="70dp"
+        android:background="@color/lighterGrey"
+        android:text="NEXT"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintTop_toBottomOf="@+id/voted_out_text"
+        tools:ignore="NotSibling" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
