--- a/MAFIA43/app/src/main/res/layout/voting_selection.xml
+++ b/MAFIA43/app/src/main/res/layout/voting_selection.xml
@@ -90,7 +90,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         android:fillViewport="true"
-        android:background="@drawable/border">
+        android:background="@drawable/border_dark">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
