allows win condition

--- a/MAFIA43/app/src/main/res/layout/voting_selection.xml
+++ b/MAFIA43/app/src/main/res/layout/voting_selection.xml
@@ -138,16 +138,15 @@
 
     <TextView
         android:id="@+id/timer_text"
-        android:layout_width="60dp"
+        android:layout_width="100dp"
         android:layout_height="30dp"
+        android:textAlignment="textEnd"
         android:textSize="20sp"
-        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.872"
         app:layout_constraintStart_toEndOf="@+id/skip_button"
-        app:layout_constraintTop_toBottomOf="@+id/confirm_button"
-        app:layout_constraintVertical_bias="0.781">
+        app:layout_constraintTop_toBottomOf="@+id/confirm_button">
 
     </TextView>
 
