--- a/MAFIA43/app/src/main/res/layout/vote_recap.xml
+++ b/MAFIA43/app/src/main/res/layout/vote_recap.xml
@@ -22,15 +22,18 @@
         android:id="@+id/voted_out_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/opensans_bold"
-        android:textSize="50sp"
+        android:fontFamily="@font/opensans_regular"
         android:textAlignment="center"
         android:textColor="@color/white"
+        android:textSize="40sp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.15" />
+        app:layout_constraintVertical_bias="0.415" />
 
     <Button
         android:id="@+id/recap_next_button"
@@ -45,6 +48,7 @@
         app:layout_constraintStart_toStartOf="parent"
 
         app:layout_constraintTop_toBottomOf="@+id/voted_out_text"
+        app:layout_constraintVertical_bias="0.214"
         tools:ignore="NotSibling" />
 
 
